src/Traffk.Portal/wwwroot/css/styles.css
/* ... */
.confirm-btns {
  padding-left: 0;
  list-style-type: none;
  margin-top: 35px;
}
.confirm-btns li {
  display: inline-block;
  margin-left: 12px;
}
.btn-bordered {
  padding: 10px 30px;
  border-radius: 6px;
  font-size: 16px;
  color: #000;
}
#filter-tags-container p a {
  text-decoration: underline;
  font-weight: bold;
}
#personal-page-nav {
  list-style-type: none;
  padding-left: 0;
}
#personal-page-nav li {
  display: inline-block;
  margin-right: 15px;
}
#personal-page-nav li a {
  display: block;
  color: #000;
  text-decoration: none;
  padding: 10px 20px;
    font-weight: normal;
}
#personal-page-nav li a.active {
  /* these styles match the mockup
  border: 1px solid #000;
  box-shadow: inset 0 0 4px #666;
  */
  font-weight: bold;
}
.row.border-bottom {
  border-bottom: 1px solid #000;
  padding-bottom: 20px;
}
.inline-form, .inline-form .form-control {
  width: auto;
  display: inline-block;
}
.inline-form label {
  font-size: 16px;
  font-weight: normal;
  margin-right: 20px;
  text-align: right;
  vertical-align: top;
    width: 200px;
}
.inline-form .form-control {
  width: 300px; 
}
.personal-section  {
  display: none;
}
#personal-edit-form-container {
  display: block;
}
.breadcrumbs {
  list-style-type: none;
  padding-left:0;
  margin-bottom: 0;
}
.breadcrumbs li {
  display: inline-block;
}
.breadcrumbs li span {
  margin: 0 5px;
}
#personal-page-nav li a .fa-chevron-down, #personal-page-nav li a .fa-chevron-up {
  font-size: .7em;
}
#personal-health li {
  display: block;
  margin-right: 0;
}
#recipient-autocomplete-tags {
  margin-left: 100px !important;
  margin-top: 12px;
}
.autocomplete-tags {
  padding-left: 0;
  list-style-type: none;
}
.autocomplete-tags li {
  display: block;
}
.autocomplete-tags li a {
  color: #000;
  font-size: 14px;
  text-decoration: none;
  padding: 2px 5px;
  border-radius: 4px;
}
.autocomplete-tags li a:hover {
  background: #eee;
}
#personal-page-img {
  float: right;
  width: 300px;
  border: 1px solid #ccc;
  padding: 20px;
  border-radius: 5px;
}
.dl-horizontal {
    width: 75%;
    display:inline-block;
    font-size: 16px;
    font-weight: normal;
    margin-right: 20px;
}
.dl-horizontal dd,dt {
    margin-bottom: 5px;
}

.dl-horizontal dd {
    color: #666;
}

.error-msg {
  color: #B3190F;
}
#page-wrapper.nav-open {
  padding-top: 82px;
}
.section-toggle {
  cursor: pointer !important;
}
.section-toggle .fa {
  font-size: .75em;
}
#client-logo {
  max-height: 60px;
}
.nav .open > a, .nav .open > a:focus, .nav .open > a:hover {
  background: transparent;
}
.navbar-brand.img-logo .caret {
  z-index: 999;
  float: right;
  position: relative;
  top: -28px; /* offset 50% of nav height -50% of caret height */
  left: 15px;
}

#export-report-step-2 {
    display: none;
}

#send-report-message-step-2 {
    display: none;
}

.popup.steps {
    width: auto;
}

#primary-subnav-logo {
    transform: translateX(-50%);
    left: 50%;
    position: absolute;
    width: 200px;
    height: 60px;
    font-size: 60px;
    vertical-align: middle;
    display: table;
    float: none;
    margin: auto;
    line-height: 60px;
}

#primary-subnav-logo a{
    display: table-cell;
    float: none;
    width: 200px;
    height: 60px;
    color: white;
    text-decoration: none;
    text-align: center;
    margin: auto;
    vertical-align: middle;
}

.contact-tags {
    list-style-type: none;
    padding-left: 0px;
    width: 400px;
    display: inline-block;
}

.contact-tags > li {
    padding-bottom: 10px;
}

.contact-tags > li.contact-tag > span {
    margin-right: 10px;
    text-decoration: none;
    color: #000;
    border: 1px solid #979797;
    border-radius: 6px;
    padding: 4px 10px 4px 14px;
    display:inline-block;
}

.contact-tag > span > span.fa.fa-times, .contact-tags span.glyphicon.glyphicon-plus {
    cursor: pointer;
}

.report-tags {
    list-style-type: none;
    padding-left: 0px;
}

.report-tags > li {
    padding-bottom: 10px;
    display: inline-block;
}

.report-tags > li.report-tag > span {
    margin-right: 10px;
    text-decoration: none;
    color: #000;
    border: 1px solid #979797;
    border-radius: 6px;
    padding: 4px 10px 4px 14px;
    display:inline-block;
}

.alert {
    display: none;
}

.validation-summary-errors ul{
    list-style-type: none;
}

.html-editor-form {
    width: 100%
}

.html-editor-form label{
    width: revert;
}

.html-editor-form .col-sm-10 {
    margin-bottom: 40px;
}

@media (min-width: 1200px) {
        .container {
        width: 90%;
    }
}
@media (max-width: 993px) {
  .container-internal {
    width: 95%;
  }
}
@media screen and (min-device-width: 768px) and (max-device-width: 992px) {
  .step-indicator {
	  margin-bottom: 85px;
	}
	.step-indicator li {
	  display: inline-block;
	}
	.step-indicator .step-description {
	  position: absolute;
	  left: 85px;
	  top: 95px;
	}
  .col-sm-2 .btn {
    max-width: 100% !important;
    width: 100%;
    text-align: center;
    padding-left: 0;
    padding-right: 0;
  }
  .filter-tags li a {
    font-size: 14px;
  }
  #personal-page-img {
    display: block;
    margin: 0 auto 15px;
    float: none;
  }
  #page-wrapper, .popup {
	font-size: 17px;
  }
}
/* ... */

